# slack-emoji-batch-uploader

./: .env.example  .gitignore  LICENSE  README.md  delete_emoji.py  main.py  pyproject.toml  requirements.txt  split_to_tiles.py  upload_emoji.py
.github/workflows/: pylint.yml
docs/: README.md
slack_emoji_batch_uploader/: constant.py  delete.py  split_image.py  split_image_gif.py  upload.py  utils.py
